feat: code block css with shiki vars.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,6 +26,7 @@
 @plugin "@tailwindcss/typography";
 
 @import './prose.css';
+@import './components/shiki.css';
 
 /* ==========================================================================
    View Transitions
