refactor: tighten code block implementation

--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -197,4 +197,5 @@ const { title, description, publishDate, updatedDate, tags } = post.data;
   import '../scripts/heading-anchors.ts';
   import '../scripts/sheen-links.ts';
   import '../scripts/sheen-headings.ts';
+  import '../scripts/code-copy.ts';
 </script>
